--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Keterlibatan aktif Klien dalam Siklus Proyek sangat kami sarankan.Selain keterli
 			</div>
 
 		</div>
-
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/kJyyyb0qEcc?rel=0&amp;autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.min.js"></script>
 
@@ -155,7 +155,7 @@ Keterlibatan aktif Klien dalam Siklus Proyek sangat kami sarankan.Selain keterli
 			});
 
 		</script>
-
+	
 		    
 
 	</body>
